<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/smartrate_dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/smartrate_rate_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/smartrate_dialog_title_margin_top"
        android:gravity="center"
        android:text="@string/smartrate_rate_dialog_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/smartrate_rate_dialog_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/smartrate_rate_dialog_message"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smartrate_button_margin_top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/smartrate_rate_no_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/smartrate_no" />

        <Button
            android:id="@+id/smartrate_rate_yes_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/smartrate_yes" />
    </LinearLayout>
</LinearLayout>